Cleaned up some last minute layout issues.

--- a/resources/datasim/ui/sass/codemirror.scss
+++ b/resources/datasim/ui/sass/codemirror.scss
@@ -159,7 +159,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #a22;}
 .CodeMirror {
   position: relative;
   overflow: hidden;
-  background: #F8F8F8;
+  background: white;
 }
 
 .CodeMirror-scroll {
